// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function local 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"test_instanceids_8C0C9E3F\\": \\"\${concat(aws_instance.blue.*.id, aws_instance.green.*.id)}\\"
  }
}"
`;

exports[`local reference 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"test_resourcename_651EB899\\": \\"my_resource\\"
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test_testresource_F1C68B60\\": {
        \\"name\\": \\"\${local.test_resourcename_651EB899}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-resource\\",
            \\"uniqueId\\": \\"test_testresource_F1C68B60\\"
          }
        }
      }
    }
  }
}"
`;

exports[`multiple locals 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"test_local1_73AEAF61\\": \\"1\\",
    \\"test_local2_7C9E2F43\\": \\"2\\"
  }
}"
`;

exports[`object local 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"test_commontags_88A9E9A0\\": {
      \\"Service\\": \\"service_name\\",
      \\"Owner\\": \\"owner\\"
    }
  }
}"
`;

exports[`string local 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"locals\\": {
    \\"test_greeting_553D8EE0\\": \\"Hello, \${var.name}\\"
  }
}"
`;
